2 ways to slice a dictionary

--- a/exercises_representing_data.ipynb
+++ b/exercises_representing_data.ipynb
@@ -6,7 +6,7 @@
       "name": "exercises-representing-data.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN7b6RJMh+5DAJ1qhj5pN+K",
+      "authorship_tag": "ABX9TyN8EsYVCFFIefcLmu99PM2F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -126,7 +126,7 @@
         },
         "outputId": "3d49b90a-2d45-43a8-96e3-dcf92720ca7e"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -469,6 +469,78 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Dictionary Slicing\n",
+        "\n",
+        "Return n values (un-ordered)"
+      ],
+      "metadata": {
+        "id": "fOjcLd0qPh5J"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "airlines = {'N/A': 'Private flight', 'GNL': '135 Airways', 'RNX': '1Time Airline', 'WYT': '2 Sqn No 1 Elementar...ing School', 'TFU': '213 Flight Unit', 'CHD': '223 Flight Unit State Airline', 'TTF': '224th Flight Unit', 'TWF': '247 Jet Ltd', 'SEC': '3D Aviation', 'MLA': '40-Mile Air'}\n",
+        "list(airlines.items())[:5]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2M5jUB0uPoRs",
+        "outputId": "c23e24cf-5cfd-473b-d34b-9b2cf1a1b926"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('N/A', 'Private flight'),\n",
+              " ('GNL', '135 Airways'),\n",
+              " ('RNX', '1Time Airline'),\n",
+              " ('WYT', '2 Sqn No 1 Elementar...ing School'),\n",
+              " ('TFU', '213 Flight Unit')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "{k: airlines[k] for k in list(airlines)[:5]}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2c699797-e14d-4a8d-b008-31f301a88e10",
+        "id": "TG8_wdiGPv3i"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'GNL': '135 Airways',\n",
+              " 'N/A': 'Private flight',\n",
+              " 'RNX': '1Time Airline',\n",
+              " 'TFU': '213 Flight Unit',\n",
+              " 'WYT': '2 Sqn No 1 Elementar...ing School'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     }
   ]
 }
