swap dict keys wip

--- a/exercises_representing_data.ipynb
+++ b/exercises_representing_data.ipynb
@@ -6,7 +6,7 @@
       "name": "exercises-representing-data.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN8EsYVCFFIefcLmu99PM2F",
+      "authorship_tag": "ABX9TyMWmpL1eVV6cqFeRi6fjMB4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -473,6 +473,150 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Sets & Mappings 2:15\n",
+        "\n",
+        "Dictionaries map keys to values – so that you can answer, \"what value is associated with this given key.\" What if you want to find out which keys are associated to a given value?\n",
+        "\n",
+        "For this purpose, write a function called swap_keys_and_values\n",
+        "\n",
+        "Be careful, because a given value might be mapped to by more than one key! So, this function should return a mapping from what-used-to-be-values to a set of what-used-to-be-keys. Concretely,\n"
+      ],
+      "metadata": {
+        "id": "n3SpipeHKDum"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "swap_keys_and_values({'a': 1, 'b': 2})  # => {2: {'b'}, 1: {'a'}}\n",
+        "swap_keys_and_values({'a': 1, 'b': 2, 'c': 1})  # => {2: {'b'}, 1: {'a', 'c'}}\n"
+      ],
+      "metadata": {
+        "id": "ZxOD1Y1PLM28"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"Check whether a word is 'efficient' - if each letter can be drawn by a pencil without lifting.\"\"\"\n",
+        "EFFICIENT_LETTERS = set('BCDGIJLMNOPSUVWZ')\n",
+        "\n",
+        "def is_efficient(letters):\n",
+        "  print(letters)\n",
+        "  if set(letters).issubset(EFFICIENT_LETTERS):\n",
+        "     print(letters, ' are efficient')\n",
+        "     return True\n",
+        "  else:\n",
+        "    print(letters, ' are not efficient.')\n",
+        "    return False\n",
+        "\n",
+        "is_efficient('BCD')"
+      ],
+      "metadata": {
+        "id": "qQTkujrhKA4n",
+        "outputId": "90e6cde8-b58c-4811-b63f-0c4923c095ef",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "BCD\n",
+            "BCD  are efficient\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"Swap the keys and values in a mapping.\"\"\"\n",
+        "swap = {}\n",
+        "def swap_keys_and_values(d):\n",
+        "  for k, v in d:\n",
+        "    if (v in swap):\n",
+        "      swap(v).append(k)\n",
+        "    else:\n",
+        "      swap(v) = k  \n",
+        "  return swap\n",
+        "\n",
+        "swap_keys_and_values({'a': 1, 'b': 2, 'c': 1}) # => {2: {'b'}, 1: {'a', 'c'}}"
+      ],
+      "metadata": {
+        "id": "9kFt8HiofycU",
+        "outputId": "5b96d612-2908-45d7-e316-f90278aa4f33",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 134
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-1f6f0b9bb3fd>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    swap(v) = k\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to function call\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d = {'a': 1, 'b': 2, 'c': 1}"
+      ],
+      "metadata": {
+        "id": "RjKrgh3AhFI0"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c = {}"
+      ],
+      "metadata": {
+        "id": "b44uM1SehIA7",
+        "outputId": "43a538d6-96d2-4290-889c-de28b6c29006",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 134
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-08b7afddc987>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    c{'a'} = 2\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Dictionary Slicing\n",
         "\n",
         "Return n values (un-ordered)"
@@ -494,7 +638,7 @@
         "id": "2M5jUB0uPoRs",
         "outputId": "c23e24cf-5cfd-473b-d34b-9b2cf1a1b926"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -524,7 +668,7 @@
         "outputId": "2c699797-e14d-4a8d-b008-31f301a88e10",
         "id": "TG8_wdiGPv3i"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
